dev: User role-gated Debug page access
